@@ -6,6 +6,21 @@ use 5.008;
 my $class = Module::Build->subclass(
     class => 'My::Builder',
     code  => q{
+        sub ACTION_authortest {
+            my ($self) = @_;
+            $self->depends_on('build');
+            $self->depends_on('manifest');
+            $self->depends_on('distmeta');
+            $self->test_files( qw< t xt/author > );
+            $self->recursive_test_files(1);
+            $self->depends_on('test');
+            return;
+        }
+        sub ACTION_distdir {
+            my ($self) = @_;
+            $self->depends_on('authortest');
+            return $self->SUPER::ACTION_distdir();
+        }
     }
 );
 
