@@ -1,5 +1,5 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.35
-require 5.8.0;
+# Note: this file was auto-generated by Module::Build::Compat version 0.3603
+require 5.008000;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -9,7 +9,7 @@ WriteMakefile
           'EXE_FILES' => [
                            'htmltree'
                          ],
-          'VERSION_FROM' => 'lib/HTML/Tree.pm',
+          'VERSION_FROM' => 'lib/HTML/Element.pm',
           'PREREQ_PM' => {
                            'Test::More' => 0,
                            'Test::Exception' => 0,
